# docker-qgis-server

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .snyk  .tool-versions  BACKPORT_TODO  CHANGELOG.md  Dockerfile  Dockerfile-fillcache  Jenkinsfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  checkout_release  checkout_release.sh  package-lock.json  package.json  pyproject.toml  requirements-desktop.txt  requirements.txt
.github/: ci-upgrade.yaml  dependabot.yaml  dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  ci.yaml  clean-dockerhub-tag.yaml  clean.yaml  dependabot-auto-merge.yaml  dependency-auto-review.yaml  main.yaml  pr-check.yaml  pr-checks.yaml  pull-request-automation.yaml  rebuild-310.yaml  rebuild.yaml
acceptance_tests/: .env  .snyk  Dockerfile  Pipfile  __init__.py  conftest.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_landingpage.py  test_wfs.py  test_wms.py
acceptance_tests/config/: Dockerfile
acceptance_tests/config/project/: project.qgs
builder/: Dockerfile  build.sh  entry.sh
ci/: clean-dockerhub-tag  config.yaml  dpkg-versions.yaml  publish  requirements.txt
runtime/etc/apache2/conf-enabled/: qgis.conf
runtime/etc/fonts/: local.conf
server/: Dockerfile
server/runtime/etc/apache2/conf-enabled/: qgis.conf
