[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'qgis'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
geolinks = "0.2.1"
six = "1.16.0"
nose2 = "0.13.0"
mock = "5.0.2"
lxml = { version = "4.9.2", optional = true }

[tool.poetry.extras]
desktop = ["lxml"]
