[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'qgis'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
geolinks = "0.2.3"
six = "1.16.0"
nose2 = "0.12.0"
mock = "4.0.3"
lxml = { version = "4.9.4", optional = true }

[tool.poetry.extras]
desktop = ["lxml"]
