[tool.black]
line-length = 110
target-version = ['py38']

[tool.poetry]
name = 'acceptence'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.dev-dependencies]
c2cwsgiutils = { extras = ["standard"], version = "==5.1.6" }
pytest = "==7.2.2"
