[tool.black]
line-length = 110
target-version = ["py39"]

[tool.poetry]
name = 'acceptence'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.dev-dependencies]
c2cwsgiutils = { extras = ["tests"], version = "6.0.4" }
psycopg2 = "2.9.9"
pytest = "7.4.2"
